--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.3",
+    "mongoose-paginate-v2": "^1.8.0",
     "morgan": "^1.10.0",
     "nanoid": "^5.0.7"
   },
