--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "goit-node-rest-api",
   "type": "module",
   "scripts": {
+    "test": "jest",
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
@@ -21,6 +22,7 @@
     "nanoid": "^5.0.7"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "nodemon": "^3.0.2"
   }
 }
