--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "goit-node-rest-api",
   "type": "module",
   "scripts": {
-    "test": "jest",
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --detectOpenHandles",
+    "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch --detectOpenHandles",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -22,8 +23,10 @@
     "nanoid": "^5.0.7"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "supertest": "^7.0.0"
   },
   "version": "1.0.0",
   "main": "app.js",
