edited author info

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "version": "1.0.0",
   "main": "app.js",
-  "author": "Svit <lana@banana.com>",
+  "author": "Svitlana <svitlana.yezhkun@gmail.com>",
   "license": "ISC",
   "description": ""
 }
